# plotly-dash

./: index.html  pyproject.toml  wsgi.py
test_dash/: __init__.py  routes.py
test_dash/dashapp/: dashboard.py
test_dash/dashapp2/: dashboard2.py
test_dash/templates/: about.jinja2  index.jinja2  layout.jinja2
tests/: test_test_dash.py
