[tool.poetry]
name = "test-dash"
version = "0.1.0"
description = ""
authors = ["Arun Chithambaram <arun.chithambaram@bridgeinternationalacademies.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.0"
dash = "^1.19.0"
dash-bootstrap-components = "^0.12.0"
pandas = "^1.2.2"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
flake8 = "^4.0.0"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
